--- a/SendAndReceiveSMS/SendAndReceiveSMS/MainPage.xaml
+++ b/SendAndReceiveSMS/SendAndReceiveSMS/MainPage.xaml
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:SendAndReceiveSMS"
+             xmlns:local="clr-namespace:SendAndReceiveSMS.CustomRenderer"
              x:Class="SendAndReceiveSMS.MainPage">
     <StackLayout>
         <Entry Keyboard="Numeric" Text="" Placeholder="Phone Number" x:Name="EntryNumber"/>
-        <Entry Text="" Placeholder="Message" x:Name="EntryMessage"/>
+        <Entry Text="" Placeholder="Android Message" x:Name="EntryMessage"/>
+        <local:OTPAutoFillControl Keyboard="Numeric" Text="" Placeholder="iOS OTP Message" x:Name="OTPEntryMessage"/>
         <Button Text="Send" Clicked="Button_Clicked"/>
     </StackLayout>
 </ContentPage>
